--- a/index.html
+++ b/index.html
@@ -6,17 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PacMan</title>
-    <link rel="stylesheet" href="CSS/lightbox.css">
-    <link rel="stylesheet" href="CSS/bootstrap.rtl.css">
+
     <link rel="stylesheet" href="CSS/style.css">
 </head>
 
 <body>
-    <canvas></canvas>
+    <div class="grid"></div>
 
-    <script src="JS/lightbox.min.js"></script>
-    <script src="JS/jquery-3.6.1.min.js"></script>
-    <script src="JS/bootstrap.esm.js"></script>
+    <h3>Score: <span id="score">0</span></h3>
+
     <script src="JS/script.js"></script>
 </body>
 
